--- a/index.html
+++ b/index.html
@@ -191,13 +191,21 @@ Error message and password prompt
 
 <li>$:/state/plugin-info--1700987158-$:/ak/plugins/TWCrossLinks--2091084576</li>
 
+<li>$:/state/plugin-info-334910430-$:/core---1812962263</li>
+
+<li>$:/state/showeditpreview</li>
+
 <li>$:/state/tab--1410360712</li>
 
 <li>$:/state/tab--1963855381</li>
 
+<li>$:/state/tab-1528275152</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab/moresidebar-1850697562</li>
 
 <li>$:/state/tab/sidebar--595412856</li>
 
@@ -214,6 +222,10 @@ Error message and password prompt
 <li>$:/temp/NewTagName/refresh-1498820644</li>
 
 <li>$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary</li>
+
+<li>$:/temp/search</li>
+
+<li>$:/temp/search/input</li>
 
 <li>$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html</li>
 
@@ -568,8 +580,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200810174405158" modified="20200810174407686" title="$:/config/Freelinks/Enable">
-<pre>no</pre>
+<div created="20200810174405158" modified="20200810180502083" title="$:/config/Freelinks/Enable">
+<pre>yes</pre>
 </div>
 <div created="20200809054355350" modified="20200809054359626" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/control-panel">
 <pre>show</pre>
@@ -11063,11 +11075,20 @@ Error message and password prompt
 <div created="20200810173558412" modified="20200810173558412" title="$:/state/plugin-info--1700987158-$:/ak/plugins/TWCrossLinks--2091084576">
 <pre>contents</pre>
 </div>
+<div created="20200810175911980" modified="20200810175911980" title="$:/state/plugin-info-334910430-$:/core---1812962263">
+<pre>contents</pre>
+</div>
+<div created="20200810180040992" modified="20200810180040992" title="$:/state/showeditpreview">
+<pre>yes</pre>
+</div>
 <div created="20200809055440479" modified="20200809115651748" title="$:/state/tab--1410360712">
 <pre>$:/ak/plugins/TWCrossLinks/core/tagging</pre>
 </div>
 <div created="20200809054348319" modified="20200810173542032" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
+</div>
+<div created="20200810175848988" modified="20200810175848988" title="$:/state/tab-1528275152">
+<pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
 </div>
 <div created="20200809053615569" modified="20200810173553633" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Plugins</pre>
@@ -11075,8 +11096,11 @@ Error message and password prompt
 <div created="20200809054621483" modified="20200809054621483" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200809054238541" modified="20200810174330667" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20200810175903549" modified="20200810175906509" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/System</pre>
+</div>
+<div created="20200809054238541" modified="20200810180441131" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20200809054350562" modified="20200809054350562" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
@@ -11084,7 +11108,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="Welcome [[Talks by Date]]" title="$:/StoryList">
+<div created="20200810174443808" list="Welcome [[Talks by Date]]" modified="20200810175909170" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML $:/core/ui/Buttons/control-panel" modified="20200809054405531" title="$:/tags/PageControls">
@@ -11103,23 +11127,23 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200810173531302&quot;
+            &quot;text&quot;: &quot;20200810174440951&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;https://5n0p3.github.io/&quot;
+            &quot;text&quot;: &quot;file:///Users/nath/Downloads/index.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;5n0p3.github.io&quot;
+            &quot;text&quot;: &quot;&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;5n0p3.github.io&quot;
+            &quot;text&quot;: &quot;&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;https:&quot;
+            &quot;text&quot;: &quot;file:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -11127,7 +11151,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/&quot;
+            &quot;text&quot;: &quot;/Users/nath/Downloads/index.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -11135,7 +11159,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;https://5n0p3.github.io&quot;
+            &quot;text&quot;: &quot;file://&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -11147,7 +11171,7 @@ Error message and password prompt
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en&quot;
+            &quot;text&quot;: &quot;en-gb&quot;
         }
     }
 }</pre>
@@ -11156,6 +11180,12 @@ Error message and password prompt
 <pre>yes</pre>
 </div>
 <div created="20200809053621095" modified="20200809053624247" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
+<pre></pre>
+</div>
+<div created="20200810175840949" modified="20200810180500333" title="$:/temp/search">
+<pre></pre>
+</div>
+<div created="20200810175840951" modified="20200810180500334" title="$:/temp/search/input">
 <pre></pre>
 </div>
 <div created="20200809053619586" modified="20200809053619586" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html" url="https://tiddlywiki.com/library/v5.1.23/index.html">
@@ -11744,7 +11774,7 @@ Quiet minute together.</pre>
 <div bag="default" created="20200806091703518" modified="20200808062952010" revision="0" tags="Keywords" title="vedanā" type="text/vnd.tiddlywiki">
 <pre>See [[pleasant]], [[unpleasant]], [[neither-nor]]</pre>
 </div>
-<div created="20200809055134512" modified="20200809055701166" title="Welcome">
+<div created="20200809055134512" modified="20200810180444887" title="Welcome">
 <pre>You can see all the transcribed talks either listed as 
 
 * [[Talks by Date]] or
@@ -11752,30 +11782,33 @@ Quiet minute together.</pre>
 
 !!! User Instructions
 
-When viewing a talk you can choose to show the keywords as links by checking or unchecking the 
+When viewing a talk you can choose to show the keywords as highlighted &quot;links&quot; by checking or unchecking the 
 ''``Show Cross Site Keywords as Links``''
-checkbox on the right sidebar.
+checkbox on the right sidebar (on desktop on mobile it's above this text).
 
-If you click on a Keyword in the text it will take you to a place where you can see the other mentions of this keyword across the other talks listed below it. You can also see the synonyms or other relevant words to this keyword for a broader search.
+Clicking on a ''keyword'' in the text it will take you to that keywords note. Beneath that note is listed the other mentions of this keyword in all the talks listed below it. Hover over one of those links to see a transclusion of the text in situ.
 
-New talks and new keywords will be added over time. You can add your own keywords as you browse. If you wish to save your changes, click the export button and you can save your own version on your computer.
+New talks and new keywords will be added over time. 
+
+Any visitor can add their own keywords as they browse. Yet, these changes will not be saved. If a visitor wishes to save their changes, or wishes to have an offline copy: They should click the export button {{$:/core/images/export-button}} in the 'sidebar' to save a version on their computer.
 
 You can save a talk as Favourite by clicking the edit button on the top right of any talk, and adding the tag favourite to it. (tags are at the bottom of the note)
 
 !!! If you would like to help develop this project
 
-Contact [[@nglyde on Twitter|https://twitter.com/nglyde]]
-
-!!! Known issues:
-
-* Checking and unchecking the showing keyword links reloads the wiki, and the user loses their place in the file
-* Words ending in a diacritic are not shown in the keyword freelink display (they do work in the mentions tab)
-* Plurals of Keywords don't show as freelinks, nor do other suffics (-ing, -ist…)
+Contact [[https://ngly.de/contact/]]
 
 !!! Credits
 
 *All these transcripts originate from this project: [[https://airtable.com/shr9OS6jqmWvWTG5g]]
-* This is a [[TW5 site|https://tiddlywiki.com/]] using additional functionality from [[drift|https://akhater.github.io/drift/]]</pre>
+* This is a [[TW5 site|https://tiddlywiki.com/]] using additional functionality from [[drift|https://akhater.github.io/drift/]]
+
+
+!!! Known issues:
+
+* Checking and unchecking the showing keyword links may reload the wiki, and the user loses their place in the file
+* Words ending in a diacritic are not shown in the keyword freelink display (they do work in the mentions tab)
+* Plurals of keywords don't show as freelinks, nor do other suffics (-ing, -ist…)</pre>
 </div>
 <div bag="default" created="20200726092930223" modified="20200808062952015" revision="0" tags="Keywords" title="welcoming" type="text/vnd.tiddlywiki">
 <pre>See [[mettā]]</pre>
