--- a/index.html
+++ b/index.html
@@ -12164,7 +12164,7 @@ Quiet minute together.</pre>
 <div bag="default" created="20200806091703518" modified="20200808062952010" revision="0" tags="Keywords" title="vedanā" type="text/vnd.tiddlywiki">
 <pre>See [[pleasant]], [[unpleasant]], [[neither-nor]]</pre>
 </div>
-<div created="20200809055134512" modified="20200810182844842" title="Welcome">
+<div created="20200809055134512" modified="20200810183251787" title="Welcome">
 <pre>You can see all the transcribed talks either listed as 
 
 * [[Talks ordered by the date they were given|Talks by Date]] or
@@ -12176,9 +12176,9 @@ When viewing a talk you can choose to show the keywords as highlighted &quot;lin
 ''``Show Cross Site Keywords as Links``''
 checkbox on the right sidebar (on desktop on mobile it's above this text).
 
-Clicking on a ''keyword'' in the text it will take you to that keywords note. Beneath that note is listed the other mentions of this keyword in all the talks listed below it. Hover over one of those links to see a transclusion of the text in situ.
+Clicking on a ''keyword'' in the text will take you to that keyword's note. The footer of that note contains a list of all the other mentions of this keyword in the talks. Hover over one of those links to see a transclusion of the text in situ.
 
-New talks and new keywords will be added over time. 
+New talks and new keywords will be added over time.
 
 Any visitor can add their own keywords as they browse. Yet, these changes will not be saved. If a visitor wishes to save their changes, or wishes to have an offline copy: They should click the export button {{$:/core/images/export-button}} in the 'sidebar' to save a version on their computer.
 
