--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@ Error message and password prompt
 
 <li>$:/state/showeditpreview</li>
 
+<li>$:/state/sidebar</li>
+
 <li>$:/state/tab--1410360712</li>
 
 <li>$:/state/tab--1963855381</li>
@@ -10085,11 +10087,11 @@ Error message and password prompt
 <div created="20200809054747194" modified="20200809054747194" title="$:/GitHub/Path">
 <pre>/</pre>
 </div>
-<div created="20200809054736421" modified="20200809054923384" title="$:/GitHub/Repo">
-<pre>5n0p3/5n0p3.github.io</pre>
+<div created="20200809054736421" modified="20200810190508662" title="$:/GitHub/Repo">
+<pre>rbtalks/rbtalks.github.io</pre>
 </div>
-<div created="20200809054732870" modified="20200809054733886" title="$:/GitHub/Username">
-<pre>5n0p3</pre>
+<div created="20200809054732870" modified="20200810190510824" title="$:/GitHub/Username">
+<pre>rbtalks</pre>
 </div>
 <div plugin-type="import" status="pending" title="$:/Import" type="application/json">
 <pre>{
@@ -11089,6 +11091,9 @@ Error message and password prompt
 <div created="20200810180040992" modified="20200810180040992" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
+<div created="20200810184837399" modified="20200810184931803" title="$:/state/sidebar">
+<pre>yes</pre>
+</div>
 <div created="20200809055440479" modified="20200809115651748" title="$:/state/tab--1410360712">
 <pre>$:/ak/plugins/TWCrossLinks/core/tagging</pre>
 </div>
@@ -11098,8 +11103,8 @@ Error message and password prompt
 <div created="20200810175848988" modified="20200810175848988" title="$:/state/tab-1528275152">
 <pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
 </div>
-<div created="20200809053615569" modified="20200810173553633" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200809053615569" modified="20200810190436811" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20200809054621483" modified="20200809054621483" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -11116,7 +11121,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810174443808" list="Welcome [[Talks by Date]]" modified="20200810182140527" title="$:/StoryList">
+<div created="20200810184833488" list="$:/ControlPanel Welcome [[Talks by Date]] [[Compassion and Emptiness]]" modified="20200810190434165" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML $:/core/ui/Buttons/control-panel" modified="20200809054405531" title="$:/tags/PageControls">
@@ -11135,23 +11140,23 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200810174440951&quot;
+            &quot;text&quot;: &quot;20200810184820060&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///Users/nath/Downloads/index.html&quot;
+            &quot;text&quot;: &quot;https://rbtalks.github.io/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;rbtalks.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;rbtalks.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -11159,7 +11164,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/Users/nath/Downloads/index.html&quot;
+            &quot;text&quot;: &quot;/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -11167,7 +11172,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://rbtalks.github.io&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -11179,7 +11184,7 @@ Error message and password prompt
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en-gb&quot;
+            &quot;text&quot;: &quot;en&quot;
         }
     }
 }</pre>
