Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -367,8 +367,6 @@ Error message and password prompt
 
 <li>stability</li>
 
-<li>suffering</li>
-
 <li>Talks by Date</li>
 
 <li>Talks by Title</li>
@@ -11121,7 +11119,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810184833488" list="$:/ControlPanel Welcome [[Talks by Date]] [[Compassion and Emptiness]]" modified="20200810190434165" title="$:/StoryList">
+<div created="20200810190730413" list="Welcome [[Talks by Date]] [[Compassion and Emptiness]]" modified="20200810190734714" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML $:/core/ui/Buttons/control-panel" modified="20200809054405531" title="$:/tags/PageControls">
@@ -11140,7 +11138,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200810184820060&quot;
+            &quot;text&quot;: &quot;20200810190650575&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -11184,7 +11182,7 @@ Error message and password prompt
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en&quot;
+            &quot;text&quot;: &quot;en-gb&quot;
         }
     }
 }</pre>
@@ -12147,9 +12145,6 @@ Quiet minute together.</pre>
 <pre></pre>
 </div>
 <div bag="default" created="20200808055614697" modified="20200808062952160" revision="0" tags="Keywords" title="stability" type="text/vnd.tiddlywiki">
-<pre></pre>
-</div>
-<div bag="default" created="20200808055643949" modified="20200808062952167" revision="0" tags="Keywords" title="suffering" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
 <div created="20200809055158093" modified="20200810182456201" title="Talks by Date">
