Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -183,11 +183,15 @@ Error message and password prompt
 
 <li>$:/plugins/tiddlywiki/freelinks</li>
 
+<li>$:/plugins/tiddlywiki/freelinks/styles</li>
+
 <li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
 
 <li>$:/state/edit/references--1198994933</li>
+
+<li>$:/state/plugin-info--1282796834-$:/plugins/tiddlywiki/freelinks---567570423</li>
 
 <li>$:/state/plugin-info--1700987158-$:/ak/plugins/TWCrossLinks--2091084576</li>
 
@@ -11059,6 +11063,14 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20200810191320489" modified="20200810191326720" tags="$:/tags/Stylesheet" title="$:/plugins/tiddlywiki/freelinks/styles">
+<pre>\rules only filteredtranscludeinline transcludeinline macrodef macrocallinline
+
+button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
+	background-color: #;
+}
+</pre>
+</div>
 <div created="20200809054101660" modified="20200809054101660" title="$:/SiteSubtitle">
 <pre>Transcripts of Dharma Talks</pre>
 </div>
@@ -11067,6 +11079,9 @@ Error message and password prompt
 </div>
 <div created="20200809053837053" modified="20200809053837053" title="$:/state/edit/references--1198994933">
 <pre>show</pre>
+</div>
+<div created="20200810191303924" modified="20200810191303924" title="$:/state/plugin-info--1282796834-$:/plugins/tiddlywiki/freelinks---567570423">
+<pre>contents</pre>
 </div>
 <div created="20200810173558412" modified="20200810173558412" title="$:/state/plugin-info--1700987158-$:/ak/plugins/TWCrossLinks--2091084576">
 <pre>contents</pre>
@@ -11089,8 +11104,8 @@ Error message and password prompt
 <div created="20200810175848988" modified="20200810175848988" title="$:/state/tab-1528275152">
 <pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
 </div>
-<div created="20200809053615569" modified="20200810190436811" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200809053615569" modified="20200810191259598" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200809054621483" modified="20200809054621483" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -11107,7 +11122,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810190730413" list="Welcome [[Talks by Date]] [[Compassion and Emptiness]]" modified="20200810190956679" title="$:/StoryList">
+<div created="20200810190730413" list="$:/ControlPanel $:/plugins/tiddlywiki/freelinks $:/plugins/tiddlywiki/freelinks/styles Welcome [[Talks by Date]] [[Compassion and Emptiness]]" modified="20200810191305165" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML $:/core/ui/Buttons/control-panel" modified="20200809054405531" title="$:/tags/PageControls">
