Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -11063,11 +11063,11 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200810191320489" modified="20200810191326720" tags="$:/tags/Stylesheet" title="$:/plugins/tiddlywiki/freelinks/styles">
+<div created="20200810191320489" modified="20200810191631498" tags="$:/tags/Stylesheet" title="$:/plugins/tiddlywiki/freelinks/styles">
 <pre>\rules only filteredtranscludeinline transcludeinline macrodef macrocallinline
 
 button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
-	background-color: #;
+	background-color: #; text-decoration: underline;
 }
 </pre>
 </div>
