--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@ Error message and password prompt
 
 <li>generosity</li>
 
+<li>God</li>
+
 <li>impermanence</li>
 
 <li>impermanent</li>
@@ -11063,11 +11065,11 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200810191320489" modified="20200810191631498" tags="$:/tags/Stylesheet" title="$:/plugins/tiddlywiki/freelinks/styles">
+<div created="20200810191320489" modified="20200810191655939" tags="$:/tags/Stylesheet" title="$:/plugins/tiddlywiki/freelinks/styles">
 <pre>\rules only filteredtranscludeinline transcludeinline macrodef macrocallinline
 
 button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
-	background-color: #; text-decoration: underline;
+	color: gray; text-decoration: underline;
 }
 </pre>
 </div>
@@ -11122,7 +11124,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810190730413" list="$:/ControlPanel $:/plugins/tiddlywiki/freelinks $:/plugins/tiddlywiki/freelinks/styles Welcome [[Talks by Date]] [[Compassion and Emptiness]]" modified="20200810191305165" title="$:/StoryList">
+<div created="20200810190730413" list="$:/ControlPanel $:/plugins/tiddlywiki/freelinks $:/plugins/tiddlywiki/freelinks/styles Welcome Keywords God [[Talks by Date]] [[Compassion and Emptiness]]" modified="20200810192028041" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML $:/core/ui/Buttons/control-panel" modified="20200809054405531" title="$:/tags/PageControls">
@@ -11981,6 +11983,9 @@ I think I'll stop there, actually. Shall we have a few quiet moments together?</
 </div>
 <div bag="default" created="20200726163147973" modified="20200808062951827" revision="0" tags="Keywords" title="generosity" type="text/vnd.tiddlywiki">
 <pre>See [[dāna]], [[dana]]</pre>
+</div>
+<div created="20200810192033580" modified="20200810192038273" tags="Keywords" title="God">
+<pre></pre>
 </div>
 <div bag="default" created="20200808065601425" modified="20200808065656879" revision="0" tags="Keywords" title="impermanence" type="text/vnd.tiddlywiki">
 <pre>[[impermanent]], [[anicca]]</pre>
