Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -259,6 +259,8 @@ Error message and password prompt
 
 <li>citta</li>
 
+<li>compassion</li>
+
 <li>Compassion and Emptiness</li>
 
 <li>concocted</li>
@@ -315,6 +317,8 @@ Error message and password prompt
 
 <li>God</li>
 
+<li>happiness</li>
+
 <li>impermanence</li>
 
 <li>impermanent</li>
@@ -360,6 +364,8 @@ Error message and password prompt
 <li>samādhi</li>
 
 <li>stability</li>
+
+<li>suffering</li>
 
 <li>Talks by Date</li>
 
@@ -11124,7 +11130,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810190730413" list="$:/ControlPanel $:/plugins/tiddlywiki/freelinks $:/plugins/tiddlywiki/freelinks/styles Welcome Keywords God [[Talks by Date]] [[Compassion and Emptiness]]" modified="20200810192028041" title="$:/StoryList">
+<div created="20200810190730413" list="happiness [[Compassion and Emptiness]]" modified="20200810192028041" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML $:/core/ui/Buttons/control-panel" modified="20200809054405531" title="$:/tags/PageControls">
@@ -11195,7 +11201,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div created="20200810173646702" modified="20200810173646702" title="$:/temp/NewTagName/refresh-1498820644">
 <pre>yes</pre>
 </div>
-<div created="20200810182149930" modified="20200810182150519" title="$:/temp/NewTagName/refresh-700569662">
+<div created="20200810182149930" modified="20200810192132065" title="$:/temp/NewTagName/refresh-700569662">
 <pre>yes</pre>
 </div>
 <div created="20200810182156772" modified="20200810182157403" title="$:/temp/NewTagName/refresh-838249148">
@@ -11345,6 +11351,9 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 </div>
 <div bag="default" created="20200726154851701" modified="20200808062951561" revision="0" tags="Keywords" title="citta" type="text/vnd.tiddlywiki">
 <pre>See [[heart]], [[mind]]</pre>
+</div>
+<div created="20200810192102699" modified="20200810192106833" tags="Keywords" title="compassion">
+<pre></pre>
 </div>
 <div created="20200810182103150" modified="20200810190857752" tags="[[2005 November Solitary Retreat]] Talks" title="Compassion and Emptiness">
 <pre>* 2005 November Solitary Retreat
@@ -11987,6 +11996,9 @@ I think I'll stop there, actually. Shall we have a few quiet moments together?</
 <div created="20200810192033580" modified="20200810192038273" tags="Keywords" title="God">
 <pre></pre>
 </div>
+<div created="20200810192218119" modified="20200810192220069" tags="" title="happiness">
+<pre></pre>
+</div>
 <div bag="default" created="20200808065601425" modified="20200808065656879" revision="0" tags="Keywords" title="impermanence" type="text/vnd.tiddlywiki">
 <pre>[[impermanent]], [[anicca]]</pre>
 </div>
@@ -12139,6 +12151,9 @@ Quiet minute together.</pre>
 <pre></pre>
 </div>
 <div bag="default" created="20200808055614697" modified="20200808062952160" revision="0" tags="Keywords" title="stability" type="text/vnd.tiddlywiki">
+<pre></pre>
+</div>
+<div created="20200810192127972" modified="20200810192133162" tags="Keywords" title="suffering">
 <pre></pre>
 </div>
 <div created="20200809055158093" modified="20200810182456201" title="Talks by Date">
