--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/temp/NewTagName/refresh--1995361894</li>
+
+<li>$:/temp/NewTagName/refresh--2013285168</li>
+
 <li>$:/temp/NewTagName/refresh-1498820644</li>
 
 <li>$:/temp/NewTagName/refresh-700569662</li>
@@ -297,6 +301,8 @@ Error message and password prompt
 
 <li>emotions</li>
 
+<li>empathy</li>
+
 <li>energy</li>
 
 <li>equanimity</li>
@@ -362,6 +368,8 @@ Error message and password prompt
 <li>restlessness</li>
 
 <li>samādhi</li>
+
+<li>self-interest</li>
 
 <li>stability</li>
 
@@ -11109,8 +11117,8 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div created="20200809054348319" modified="20200810173542032" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
-<div created="20200810175848988" modified="20200810175848988" title="$:/state/tab-1528275152">
-<pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
+<div created="20200810175848988" modified="20200810192252236" title="$:/state/tab-1528275152">
+<pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
 <div created="20200809053615569" modified="20200810191259598" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Plugins</pre>
@@ -11130,7 +11138,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810190730413" list="happiness [[Compassion and Emptiness]]" modified="20200810192028041" title="$:/StoryList">
+<div created="20200810190730413" list="self-interest [[Compassion and Emptiness]]" modified="20200810192253490" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML $:/core/ui/Buttons/control-panel" modified="20200809054405531" title="$:/tags/PageControls">
@@ -11198,10 +11206,16 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
     }
 }</pre>
 </div>
+<div created="20200810192300816" modified="20200810192304381" title="$:/temp/NewTagName/refresh--1995361894">
+<pre>yes</pre>
+</div>
+<div created="20200810192241536" modified="20200810192242015" title="$:/temp/NewTagName/refresh--2013285168">
+<pre>yes</pre>
+</div>
 <div created="20200810173646702" modified="20200810173646702" title="$:/temp/NewTagName/refresh-1498820644">
 <pre>yes</pre>
 </div>
-<div created="20200810182149930" modified="20200810192132065" title="$:/temp/NewTagName/refresh-700569662">
+<div created="20200810182149930" modified="20200810192353076" title="$:/temp/NewTagName/refresh-700569662">
 <pre>yes</pre>
 </div>
 <div created="20200810182156772" modified="20200810182157403" title="$:/temp/NewTagName/refresh-838249148">
@@ -11210,11 +11224,11 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div created="20200809053621095" modified="20200809053624247" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre></pre>
 </div>
-<div created="20200810175840949" modified="20200810180500333" title="$:/temp/search">
-<pre></pre>
+<div created="20200810175840949" modified="20200810192249721" title="$:/temp/search">
+<pre>happiness</pre>
 </div>
-<div created="20200810175840951" modified="20200810180500334" title="$:/temp/search/input">
-<pre></pre>
+<div created="20200810175840951" modified="20200810192249721" title="$:/temp/search/input">
+<pre>happiness</pre>
 </div>
 <div created="20200809053619586" modified="20200809053619586" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html" url="https://tiddlywiki.com/library/v5.1.23/index.html">
 <pre>loaded</pre>
@@ -11966,6 +11980,9 @@ I think I'll stop there, actually. Shall we have a few quiet moments together?</
 <div bag="default" created="20200808055434552" modified="20200808062952083" revision="0" tags="Keywords" title="emotions" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
+<div created="20200810192234257" modified="20200810192243737" tags="Keywords" title="empathy">
+<pre></pre>
+</div>
 <div bag="default" created="20200806091232751" modified="20200808062951795" revision="0" tags="Keywords" title="energy" type="text/vnd.tiddlywiki">
 <pre>See [[samādhi]], [[body]], [[agitation]], [[restlessness]], [[5 hindrances]]</pre>
 </div>
@@ -11996,7 +12013,7 @@ I think I'll stop there, actually. Shall we have a few quiet moments together?</
 <div created="20200810192033580" modified="20200810192038273" tags="Keywords" title="God">
 <pre></pre>
 </div>
-<div created="20200810192218119" modified="20200810192220069" tags="" title="happiness">
+<div created="20200810192218119" modified="20200810192306585" tags="Keywords" title="happiness">
 <pre></pre>
 </div>
 <div bag="default" created="20200808065601425" modified="20200808065656879" revision="0" tags="Keywords" title="impermanence" type="text/vnd.tiddlywiki">
@@ -12148,6 +12165,9 @@ Quiet minute together.</pre>
 <pre></pre>
 </div>
 <div bag="default" created="20200726092630681" modified="20200808062951980" revision="0" tags="Keywords" title="samādhi" type="text/vnd.tiddlywiki">
+<pre></pre>
+</div>
+<div created="20200810192348019" modified="20200810192355132" tags="Keywords" title="self-interest">
 <pre></pre>
 </div>
 <div bag="default" created="20200808055614697" modified="20200808062952160" revision="0" tags="Keywords" title="stability" type="text/vnd.tiddlywiki">
