--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@ Error message and password prompt
 
 <li>diligence</li>
 
+<li>Draft of 'New Tiddler 1'</li>
+
 <li>dukkha</li>
 
 <li>dukkha method 1</li>
@@ -324,6 +326,8 @@ Error message and password prompt
 <li>God</li>
 
 <li>happiness</li>
+
+<li>ignorance</li>
 
 <li>impermanence</li>
 
@@ -380,6 +384,8 @@ Error message and password prompt
 <li>Talks by Title</li>
 
 <li>three parts to a practice</li>
+
+<li>unfathomably deep</li>
 
 <li>vedanā</li>
 
@@ -11138,7 +11144,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810190730413" list="self-interest [[Compassion and Emptiness]]" modified="20200810192253490" title="$:/StoryList">
+<div created="20200810190730413" list="[[unfathomably deep]] [[Compassion and Emptiness]]" modified="20200810192253490" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML $:/core/ui/Buttons/control-panel" modified="20200809054405531" title="$:/tags/PageControls">
@@ -11215,7 +11221,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div created="20200810173646702" modified="20200810173646702" title="$:/temp/NewTagName/refresh-1498820644">
 <pre>yes</pre>
 </div>
-<div created="20200810182149930" modified="20200810192353076" title="$:/temp/NewTagName/refresh-700569662">
+<div created="20200810182149930" modified="20200810192451164" title="$:/temp/NewTagName/refresh-700569662">
 <pre>yes</pre>
 </div>
 <div created="20200810182156772" modified="20200810182157403" title="$:/temp/NewTagName/refresh-838249148">
@@ -11962,6 +11968,9 @@ I think I'll stop there, actually. Shall we have a few quiet moments together?</
 <div bag="default" created="20200806103505506" modified="20200808062951735" revision="0" tags="Keywords" title="diligence" type="text/vnd.tiddlywiki">
 <pre>See also [[devotion]], [[dedication]] </pre>
 </div>
+<div modified="20200810192452650" title="Draft of 'New Tiddler 1'">
+<pre></pre>
+</div>
 <div bag="default" created="20200806095803498" modified="20200808062951742" revision="0" tags="Keywords" title="dukkha" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
@@ -12014,6 +12023,9 @@ I think I'll stop there, actually. Shall we have a few quiet moments together?</
 <pre></pre>
 </div>
 <div created="20200810192218119" modified="20200810192306585" tags="Keywords" title="happiness">
+<pre></pre>
+</div>
+<div created="20200810192447514" modified="20200810192452197" tags="Keywords" title="ignorance">
 <pre></pre>
 </div>
 <div bag="default" created="20200808065601425" modified="20200808065656879" revision="0" tags="Keywords" title="impermanence" type="text/vnd.tiddlywiki">
@@ -12188,6 +12200,9 @@ Quiet minute together.</pre>
 &lt;&lt;list-links &quot;[tag[Talks]] +[sort[title]]&quot;&gt;&gt;</pre>
 </div>
 <div bag="default" created="20200726155353615" modified="20200808062951989" revision="0" tags="Keywords" title="three parts to a practice" type="text/vnd.tiddlywiki">
+<pre></pre>
+</div>
+<div created="20200810192617951" modified="20200810192619732" tags="" title="unfathomably deep">
 <pre></pre>
 </div>
 <div bag="default" created="20200806091703518" modified="20200808062952010" revision="0" tags="Keywords" title="vedanā" type="text/vnd.tiddlywiki">
