--- a/index.html
+++ b/index.html
@@ -225,9 +225,13 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/temp/NewTagName/refresh--1442901724</li>
+
 <li>$:/temp/NewTagName/refresh--1995361894</li>
 
 <li>$:/temp/NewTagName/refresh--2013285168</li>
+
+<li>$:/temp/NewTagName/refresh-1133471780</li>
 
 <li>$:/temp/NewTagName/refresh-1498820644</li>
 
@@ -375,6 +379,8 @@ Error message and password prompt
 
 <li>self-interest</li>
 
+<li>self-righteousness</li>
+
 <li>stability</li>
 
 <li>suffering</li>
@@ -386,6 +392,8 @@ Error message and password prompt
 <li>three parts to a practice</li>
 
 <li>unfathomably deep</li>
+
+<li>unimaginable</li>
 
 <li>vedanā</li>
 
@@ -11135,8 +11143,8 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div created="20200810175903549" modified="20200810175906509" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/System</pre>
 </div>
-<div created="20200809054238541" modified="20200810182252124" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20200809054238541" modified="20200810192711378" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20200809054350562" modified="20200809054350562" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
@@ -11144,7 +11152,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810190730413" list="[[unfathomably deep]] [[Compassion and Emptiness]]" modified="20200810192253490" title="$:/StoryList">
+<div created="20200810190730413" list="unimaginable [[Compassion and Emptiness]]" modified="20200810192714089" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML $:/core/ui/Buttons/control-panel" modified="20200809054405531" title="$:/tags/PageControls">
@@ -11212,10 +11220,16 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
     }
 }</pre>
 </div>
+<div created="20200810192718866" modified="20200810192719271" title="$:/temp/NewTagName/refresh--1442901724">
+<pre>yes</pre>
+</div>
 <div created="20200810192300816" modified="20200810192304381" title="$:/temp/NewTagName/refresh--1995361894">
 <pre>yes</pre>
 </div>
 <div created="20200810192241536" modified="20200810192242015" title="$:/temp/NewTagName/refresh--2013285168">
+<pre>yes</pre>
+</div>
+<div created="20200810192705886" modified="20200810192706255" title="$:/temp/NewTagName/refresh-1133471780">
 <pre>yes</pre>
 </div>
 <div created="20200810173646702" modified="20200810173646702" title="$:/temp/NewTagName/refresh-1498820644">
@@ -12182,6 +12196,9 @@ Quiet minute together.</pre>
 <div created="20200810192348019" modified="20200810192355132" tags="Keywords" title="self-interest">
 <pre></pre>
 </div>
+<div created="20200810192655340" modified="20200810192707351" tags="Keywords" title="self-righteousness">
+<pre></pre>
+</div>
 <div bag="default" created="20200808055614697" modified="20200808062952160" revision="0" tags="Keywords" title="stability" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
@@ -12203,6 +12220,9 @@ Quiet minute together.</pre>
 <pre></pre>
 </div>
 <div created="20200810192617951" modified="20200810192619732" tags="" title="unfathomably deep">
+<pre></pre>
+</div>
+<div created="20200810192637004" modified="20200810192719990" tags="Keywords" title="unimaginable">
 <pre></pre>
 </div>
 <div bag="default" created="20200806091703518" modified="20200808062952010" revision="0" tags="Keywords" title="vedanā" type="text/vnd.tiddlywiki">
