--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@ Error message and password prompt
 
 <li>$:/temp/NewTagName/refresh--2013285168</li>
 
+<li>$:/temp/NewTagName/refresh--831036808</li>
+
 <li>$:/temp/NewTagName/refresh-1133471780</li>
 
 <li>$:/temp/NewTagName/refresh-1498820644</li>
@@ -293,7 +295,7 @@ Error message and password prompt
 
 <li>diligence</li>
 
-<li>Draft of 'New Tiddler 1'</li>
+<li>disempowering</li>
 
 <li>dukkha</li>
 
@@ -11152,7 +11154,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810190730413" list="unimaginable [[Compassion and Emptiness]]" modified="20200810192714089" title="$:/StoryList">
+<div created="20200810190730413" list="disempowering [[unfathomably deep]] [[Compassion and Emptiness]]" modified="20200810192739683" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML $:/core/ui/Buttons/control-panel" modified="20200809054405531" title="$:/tags/PageControls">
@@ -11229,13 +11231,16 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div created="20200810192241536" modified="20200810192242015" title="$:/temp/NewTagName/refresh--2013285168">
 <pre>yes</pre>
 </div>
+<div created="20200810192729304" modified="20200810192729705" title="$:/temp/NewTagName/refresh--831036808">
+<pre>yes</pre>
+</div>
 <div created="20200810192705886" modified="20200810192706255" title="$:/temp/NewTagName/refresh-1133471780">
 <pre>yes</pre>
 </div>
 <div created="20200810173646702" modified="20200810173646702" title="$:/temp/NewTagName/refresh-1498820644">
 <pre>yes</pre>
 </div>
-<div created="20200810182149930" modified="20200810192451164" title="$:/temp/NewTagName/refresh-700569662">
+<div created="20200810182149930" modified="20200810192900704" title="$:/temp/NewTagName/refresh-700569662">
 <pre>yes</pre>
 </div>
 <div created="20200810182156772" modified="20200810182157403" title="$:/temp/NewTagName/refresh-838249148">
@@ -11982,7 +11987,7 @@ I think I'll stop there, actually. Shall we have a few quiet moments together?</
 <div bag="default" created="20200806103505506" modified="20200808062951735" revision="0" tags="Keywords" title="diligence" type="text/vnd.tiddlywiki">
 <pre>See also [[devotion]], [[dedication]] </pre>
 </div>
-<div modified="20200810192452650" title="Draft of 'New Tiddler 1'">
+<div created="20200810192856446" modified="20200810192901400" tags="Keywords" title="disempowering">
 <pre></pre>
 </div>
 <div bag="default" created="20200806095803498" modified="20200808062951742" revision="0" tags="Keywords" title="dukkha" type="text/vnd.tiddlywiki">
@@ -12219,7 +12224,7 @@ Quiet minute together.</pre>
 <div bag="default" created="20200726155353615" modified="20200808062951989" revision="0" tags="Keywords" title="three parts to a practice" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
-<div created="20200810192617951" modified="20200810192619732" tags="" title="unfathomably deep">
+<div created="20200810192617951" modified="20200810192730225" tags="Keywords" title="unfathomably deep">
 <pre></pre>
 </div>
 <div created="20200810192637004" modified="20200810192719990" tags="Keywords" title="unimaginable">
