--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
+<li>$:/themes/tiddlywiki/vanilla/options/stickytitles</li>
+
 <li>5 hindrances</li>
 
 <li>anatta</li>
@@ -643,11 +645,11 @@ Error message and password prompt
 <div created="20200809053739546" modified="20200809053739546" title="$:/config/RelinkOnRename">
 <pre>yes</pre>
 </div>
-<div created="20200810193519545" modified="20200810193519545" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/delete">
-<pre>show</pre>
-</div>
-<div created="20200810193253380" modified="20200810193253380" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/edit">
+<div created="20200810193519545" modified="20200810193758613" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/delete">
 <pre>hide</pre>
+</div>
+<div created="20200810193253380" modified="20200810193754438" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/edit">
+<pre>show</pre>
 </div>
 <div created="20200810193257904" modified="20200810193257904" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/more-tiddler-actions">
 <pre>hide</pre>
@@ -10153,8 +10155,8 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20200810193024985" modified="20200810193458790" title="$:/palette">
-<pre>$:/palettes/Twilight</pre>
+<div created="20200810193024985" modified="20200810194042162" title="$:/palette">
+<pre>$:/palettes/SpartanNight</pre>
 </div>
 <div author="Danielo Rodrigez" bag="default" core-version="&gt;=5.1.0" created="20200304200213285" dependents="" description="Context search - provides visual highlight of search results" list="readme" modified="20200722062629918" plugin-type="plugin" revision="0" source="https://github.com/danielo515/TW5-contextPlugin" tags="$:/giffmex/stroll $:/giffmex/blinks" title="$:/plugins/danielo515/ContextPlugin" type="application/json" version="2.1.0">
 <pre>{
@@ -11161,7 +11163,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div created="20200809055440479" modified="20200809115651748" title="$:/state/tab--1410360712">
 <pre>$:/ak/plugins/TWCrossLinks/core/tagging</pre>
 </div>
-<div created="20200809054348319" modified="20200810193514687" title="$:/state/tab--1963855381">
+<div created="20200809054348319" modified="20200810193752257" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Toolbars</pre>
 </div>
 <div created="20200810175848988" modified="20200810192252236" title="$:/state/tab-1528275152">
@@ -11185,7 +11187,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810193348681" list="$:/ControlPanel Welcome [[Talks by Date]] [[Compassion and Emptiness]]" modified="20200810193508364" title="$:/StoryList">
+<div created="20200810193348681" list="Welcome [[Talks by Date]] [[Compassion and Emptiness]]" modified="20200810193625318" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML" modified="20200810193229834" title="$:/tags/PageControls">
@@ -11394,6 +11396,9 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 </div>
 <div created="20200810173544235" modified="20200810173544235" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
+</div>
+<div created="20200810193716280" modified="20200810193716280" title="$:/themes/tiddlywiki/vanilla/options/stickytitles">
+<pre>yes</pre>
 </div>
 <div bag="default" created="20200806091358785" modified="20200808062951199" revision="0" tags="Keywords" title="5 hindrances" type="text/vnd.tiddlywiki">
 <pre></pre>
@@ -12258,7 +12263,7 @@ Quiet minute together.</pre>
 <div bag="default" created="20200806091703518" modified="20200808062952010" revision="0" tags="Keywords" title="vedanā" type="text/vnd.tiddlywiki">
 <pre>See [[pleasant]], [[unpleasant]], [[neither-nor]]</pre>
 </div>
-<div created="20200809055134512" modified="20200810183251787" title="Welcome">
+<div created="20200809055134512" modified="20200810194049336" title="Welcome">
 <pre>You can see all the transcribed talks either listed as 
 
 * [[Talks ordered by the date they were given|Talks by Date]] or
@@ -12275,6 +12280,8 @@ Clicking on a ''keyword'' in the text will take you to that keyword's note. The 
 New talks and new keywords will be added over time.
 
 Any visitor can add their own keywords as they browse. Yet, these changes will not be saved. If a visitor wishes to save their changes, or wishes to have an offline copy: They should click the export button {{$:/core/images/export-button}} in the 'sidebar' to save a version on their computer.
+
+You can change the colour scheme on this site by clicking on the Palette icon. For night mode I recommend: ''Twilight'', for day reading: ''Blanca'' or ''Vanilla''.
 
 !!! If you would like to help develop this project
 
