Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10155,7 +10155,7 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20200810193024985" modified="20200810194042162" title="$:/palette">
+<div created="20200810193024985" modified="20200810194148587" title="$:/palette">
 <pre>$:/palettes/SpartanNight</pre>
 </div>
 <div author="Danielo Rodrigez" bag="default" core-version="&gt;=5.1.0" created="20200304200213285" dependents="" description="Context search - provides visual highlight of search results" list="readme" modified="20200722062629918" plugin-type="plugin" revision="0" source="https://github.com/danielo515/TW5-contextPlugin" tags="$:/giffmex/stroll $:/giffmex/blinks" title="$:/plugins/danielo515/ContextPlugin" type="application/json" version="2.1.0">
@@ -12263,7 +12263,7 @@ Quiet minute together.</pre>
 <div bag="default" created="20200806091703518" modified="20200808062952010" revision="0" tags="Keywords" title="vedanā" type="text/vnd.tiddlywiki">
 <pre>See [[pleasant]], [[unpleasant]], [[neither-nor]]</pre>
 </div>
-<div created="20200809055134512" modified="20200810194049336" title="Welcome">
+<div created="20200809055134512" modified="20200810194257203" title="Welcome">
 <pre>You can see all the transcribed talks either listed as 
 
 * [[Talks ordered by the date they were given|Talks by Date]] or
@@ -12281,7 +12281,9 @@ New talks and new keywords will be added over time.
 
 Any visitor can add their own keywords as they browse. Yet, these changes will not be saved. If a visitor wishes to save their changes, or wishes to have an offline copy: They should click the export button {{$:/core/images/export-button}} in the 'sidebar' to save a version on their computer.
 
-You can change the colour scheme on this site by clicking on the Palette icon. For night mode I recommend: ''Twilight'', for day reading: ''Blanca'' or ''Vanilla''.
+You can change the colour scheme on this site by clicking on the Palette icon. For night mode I recommend: ''Twilight'' or ''Spartan Night'', for day reading: ''Vanilla'' or ''Blanca''.
+
+Enjoy these wonder transcriptions of truly brilliant talks.
 
 !!! If you would like to help develop this project
 
