Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -11187,7 +11187,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810193348681" list="Welcome [[Talks by Date]] [[Compassion and Emptiness]]" modified="20200810193625318" title="$:/StoryList">
+<div created="20200810193348681" list="Welcome [[Talks by Date]] [[Mindfulness of Mind States]] [[Compassion and Emptiness]]" modified="20200810194301873" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML" modified="20200810193229834" title="$:/tags/PageControls">
@@ -12116,7 +12116,7 @@ I think I'll stop there, actually. Shall we have a few quiet moments together?</
 <div bag="default" created="20200726155042654" modified="20200808062951899" revision="0" tags="Keywords" title="mindfulness" type="text/vnd.tiddlywiki">
 <pre>See [[presence]], [[attention]], [[pause]]</pre>
 </div>
-<div bag="default" created="20200808052624636" modified="20200808064015371" revision="0" tags="[[2005 November Solitary Retreat]] Talks" title="Mindfulness of Mind States" type="text/vnd.tiddlywiki">
+<div bag="default" created="20200808052624636" date="2005-11-05" modified="20200810194456579" revision="0" tags="[[2005 November Solitary Retreat]] Talks" title="Mindfulness of Mind States" type="text/vnd.tiddlywiki">
 <pre>* 2005 November Solitary Retreat
 * by Rob Burbea
 * https://dharmaseed.org/retreats/2048/
