--- a/index.html
+++ b/index.html
@@ -10155,8 +10155,8 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20200810193024985" modified="20200810194148587" title="$:/palette">
-<pre>$:/palettes/SpartanNight</pre>
+<div created="20200810193024985" modified="20200810194513580" title="$:/palette">
+<pre>$:/palettes/Blanca</pre>
 </div>
 <div author="Danielo Rodrigez" bag="default" core-version="&gt;=5.1.0" created="20200304200213285" dependents="" description="Context search - provides visual highlight of search results" list="readme" modified="20200722062629918" plugin-type="plugin" revision="0" source="https://github.com/danielo515/TW5-contextPlugin" tags="$:/giffmex/stroll $:/giffmex/blinks" title="$:/plugins/danielo515/ContextPlugin" type="application/json" version="2.1.0">
 <pre>{
@@ -11187,7 +11187,7 @@ button.tc-tiddlylink.tc-freelink, a.tc-tiddlylink.tc-freelink {
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810193348681" list="Welcome [[Talks by Date]] [[Mindfulness of Mind States]] [[Compassion and Emptiness]]" modified="20200810194301873" title="$:/StoryList">
+<div list="Welcome [[Talks by Date]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200809054405531" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/advanced-search $:/plugins/kookma/commander/buttons/pagecontrol $:/core/ui/Buttons/manager $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions $:/_5n0p3/pageControl/downloadHTML" modified="20200810193229834" title="$:/tags/PageControls">
@@ -12263,7 +12263,7 @@ Quiet minute together.</pre>
 <div bag="default" created="20200806091703518" modified="20200808062952010" revision="0" tags="Keywords" title="vedanā" type="text/vnd.tiddlywiki">
 <pre>See [[pleasant]], [[unpleasant]], [[neither-nor]]</pre>
 </div>
-<div created="20200809055134512" modified="20200810194257203" title="Welcome">
+<div created="20200809055134512" modified="20200810194700732" title="Welcome">
 <pre>You can see all the transcribed talks either listed as 
 
 * [[Talks ordered by the date they were given|Talks by Date]] or
@@ -12271,7 +12271,7 @@ Quiet minute together.</pre>
 
 !!! User Instructions
 
-When viewing a talk you can choose to show the keywords as highlighted &quot;links&quot; by checking or unchecking the 
+When viewing a talk you can choose to show the keywords as underlined &quot;links&quot; by checking or unchecking the 
 ''``Show Cross Site Keywords as Links``''
 checkbox on the right sidebar (on desktop on mobile it's above this text).
 
