Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -12263,7 +12263,7 @@ Quiet minute together.</pre>
 <div bag="default" created="20200806091703518" modified="20200808062952010" revision="0" tags="Keywords" title="vedanā" type="text/vnd.tiddlywiki">
 <pre>See [[pleasant]], [[unpleasant]], [[neither-nor]]</pre>
 </div>
-<div created="20200809055134512" modified="20200810194700732" title="Welcome">
+<div created="20200809055134512" modified="20200810194949294" title="Welcome">
 <pre>You can see all the transcribed talks either listed as 
 
 * [[Talks ordered by the date they were given|Talks by Date]] or
@@ -12283,7 +12283,7 @@ Any visitor can add their own keywords as they browse. Yet, these changes will n
 
 You can change the colour scheme on this site by clicking on the Palette icon. For night mode I recommend: ''Twilight'' or ''Spartan Night'', for day reading: ''Vanilla'' or ''Blanca''.
 
-Enjoy these wonder transcriptions of truly brilliant talks.
+Enjoy these wonderful transcriptions of truly brilliant talks.
 
 !!! If you would like to help develop this project
 
